--- a/style.css
+++ b/style.css
@@ -64,12 +64,7 @@ header{
     margin-top: 20px;
     background-color: white;
     width: 750px;
-    
     border-radius: 5px;
-    
-    
-    
-    
 }
 
 .top-player-heading{
@@ -217,3 +212,259 @@ hr{
     color: gray;
     margin: 0;
 }
+
+
+
+@media only screen  and (max-width:688px){
+    body{
+        border-left: 10px solid gray;
+        border-right: 10px solid gray;
+    }
+    .logo-div{
+        position: relative;
+        left: 50px;
+    }
+    .logo-div .logo{
+        width: 15px;
+        height: 15px;
+    }
+    .logo-div h3{
+        font-size: 10px;
+        margin-left: 5px;
+    }
+    .navbar-div{
+        position: relative;
+        right: 70px; 
+    }
+    .navbar-div a{
+        font-size: 10px;
+    }
+    
+    .navbar-div img{
+        margin-left: 2px;
+        width: 15px;
+        height: 15px;
+    }
+    
+    /* section design */
+    
+    .section{
+        margin-top: 5px;
+        width: 350px;
+        border-radius: 5px;
+    }
+    
+    
+    
+    .top-player-heading{
+        margin-top: 10px;
+        margin-left: 8px;
+        text-align: center;
+        
+    }
+    .players{
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-column-gap: 5px;
+        grid-row-gap: 10px;
+    }
+    
+    .player-image{
+        
+        margin-left: 10px;
+    }
+    .player-name{
+        margin-left: 10px;
+    }
+    .player-image img{
+        width: 20px;
+        width: 20px;
+        
+    }
+    
+    
+    
+    /* top blog  */
+    
+    .top-blog-heading{
+        margin-top: 10px;
+        margin-left: 10px;
+        text-align: center;
+    }
+    
+    .blogs{
+        margin-top: 10px;
+        margin-left: 10px;;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        
+    }
+    .blog-images img{
+        width: 85px;
+        height: 100px;
+    }
+    .blog-info{
+        width: 300px;
+        height: 100px;
+        padding: 4px;
+        
+    }
+    
+    
+    /* late course design */
+    
+    .late-courses-heading{
+        padding-top: 10px;
+        margin-left: 10px;
+        text-align: center;
+    }
+    .courses{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        padding-top: 10px;
+        margin-left: 50px;
+        
+    }
+    .course{
+        margin-bottom: 20px;
+    }  
+}
+/* width 668-----992  design */
+@media only screen and (min-width:688px) and (max-width:992px){
+    
+    body{
+        border-left: 20px solid gray;
+        border-right: 20px solid gray;
+    }
+    .logo-div{
+        position: relative;
+        left: 100px;
+    }
+    .logo-div .logo{
+        width: 25px;
+        height: 25px;
+    }
+    .logo-div h3{
+        font-size: 15px;
+        margin-left: 10px;
+    }
+    .navbar-div{
+        position: relative;
+        right: 100px; 
+    }
+    .navbar-div a{
+        font-size: 15px;
+    }
+    
+    .navbar-div img{
+        margin-left: 5px;
+        width: 25px;
+        height: 25px;
+    }
+    
+    /* section design     */
+    
+    .section{
+        margin-top: 10px;
+        width: 500px;
+        border-radius: 5px;
+    }
+    
+    
+    
+    .top-player-heading{
+        margin-top: 15px;
+        margin-left: 15px;
+        text-align: center;
+        
+    }
+    .players{
+        margin-top: 15px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+    }
+    
+    .player-image{
+        
+        margin-left: 20px;
+    }
+    .player-name{
+        margin-left: 15px;
+    }
+    .player-image img{
+        width: 35px;
+        width: 35px;
+        
+    }
+    
+    /* top blog  */
+    
+    .top-blog-heading{
+        margin-top: 15px;
+        margin-left: 15px;
+        text-align: center;
+    }
+    
+    .blogs{
+        margin-top: 10px;
+        margin-left: 10px;;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        
+    }
+    .blog{
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+    .blog-images img{
+        width: 50px;
+        height: 80px;
+    }
+    .blog-info{
+        width: 100px;
+        height: 50px;
+        padding: 1px;
+        
+    }
+    .blog-title{
+        font-size: 10px;
+    }
+    .blog-info p{
+        font-size: 10px;
+    }
+    
+    
+    /* late course design */
+    
+    .late-courses-heading{
+        padding-top: 10px;
+        margin-left: 10px;
+        text-align: center;
+    }
+    .courses{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin-top: 20px;
+        padding-top: 10px;
+        margin-left: 10px;
+        
+    }
+    .course{
+        margin-bottom: 20px;
+    } 
+    
+    
+    
+}
+
+
+
+
+
+
+
